New SpiralAdaptiveFresnelLens added, minor improvements