@@ -1,11 +1,13 @@
 package javawaveoptics.optics.component;
 
+import java.awt.Component;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
 import java.io.Serializable;
 
+import javax.swing.JCheckBox;
 import javax.swing.JComboBox;
 import javax.swing.JFormattedTextField;
 
@@ -43,8 +45,10 @@ implements SimplePixelWiseOpticalComponentInterface, Serializable, PropertyChang
 	
 	public enum CylindricalLensSpiralType
 	{
-		ARCHIMEDEAN("Archimedean"),
-		LOGARITHMIC("Logarithmic");
+		ARCHIMEDEAN("<html>Archimedean (<i>R</i> = <i>b</i> &phi; m)</html>"),
+		FERMAT("<html>Fermat (<i>R</i> = (<i>b</i> &phi;)<sup>(1/2)</sup> m) - Under construction!</html>"),
+		HYPERBOLIC("<html>Hyperbolic (<i>R</i> = -1/(<i>b</i> &phi;) m)</html>"),
+		LOGARITHMIC("<html>Logarithmic (<i>R</i> = exp(<i>b</i> &phi;) m)</html>");
 		
 		private String description;
 		private CylindricalLensSpiralType(String description) {this.description = description;}	
@@ -61,7 +65,7 @@ implements SimplePixelWiseOpticalComponentInterface, Serializable, PropertyChang
 	 * the cylindrical lens's focal length (at distance r=1);
 	 * the cross-section of the cylindrical lens is Phi(t) = (pi d^2)(lambda f), where d is the distance from the nearest point on the spiral
 	 */
-	private double focalLength;
+	private double f1;
 	
 	/**
 	 * the centre of the cylindrical lens follows either the logarithmic spiral r = exp(b (phi-phi0)), or the Archimedean spiral r = b (phi-phi0);
@@ -73,6 +77,28 @@ implements SimplePixelWiseOpticalComponentInterface, Serializable, PropertyChang
 	 * relative rotation angle of the spiral (in radians);
 	 */
 	private double phi0;
+	
+	public enum WindingBoundaryPlacementType
+	{
+		HALF_WAY("Half-way between nodal lines of neighbouring windings"),
+		ROTATED_SPIRAL("On the nodal-line spiral, rotated by 180°");
+		// in the fullness of time, add an option to place the boundary such that there are no discontinuities between neighbouring windings
+		
+		private String description;
+		private WindingBoundaryPlacementType(String description) {this.description = description;}	
+		@Override
+		public String toString() {return description;}
+	}
+	
+	/**
+	 * placement of the boundary between neighbouring windings
+	 */
+	private WindingBoundaryPlacementType windingBoundaryPlacement;
+	
+	private boolean alvarezLohmannWindingFocussing;
+	
+	private boolean azimuthalPhaseComponensation;
+
 	
 	// private variables
 	
@@ -86,18 +112,29 @@ implements SimplePixelWiseOpticalComponentInterface, Serializable, PropertyChang
 	 * a variable that is required during the calculation of the phase;
 	 * depends only on b, so pre-calculate it when b is being set
 	 */
-	private double deltaNu;
+	// private double deltaNu;
 	
 	/*
 	 * GUI edit controls
 	 */
 	
 	private transient JComboBox<CylindricalLensSpiralType> cylindricalLensSpiralTypeComboBox;
+	private transient JComboBox<WindingBoundaryPlacementType> windingBoundaryPlacementComboBox;
 	private transient LengthField focalLengthField;
 	private transient JFormattedTextField bTextField, phi0DegTextField;
+	private transient JCheckBox alvarezLohmannWindingFocussingCheckBox, azimuthalPhaseComponensationCheckBox;
 	
 	
-	public CylindricalLensSpiral(String name, CylindricalLensSpiralType cylindricalLensSpiralType, double focalLength, double b, double phi0)
+	public CylindricalLensSpiral(
+		String name, 
+		CylindricalLensSpiralType cylindricalLensSpiralType, 
+		double focalLength, 
+		double b, 
+		double phi0,
+		WindingBoundaryPlacementType windingBoundaryPlacement,
+		boolean alvarezLohmannWindingFocussing,
+		boolean azimuthalPhaseComponensation
+	)
 	{
 		super(name);
 		
@@ -105,6 +142,9 @@ implements SimplePixelWiseOpticalComponentInterface, Serializable, PropertyChang
 		setFocalLength(focalLength);
 		setB(b);
 		setPhi0(phi0);
+		setWindingBoundaryPlacement(windingBoundaryPlacement);
+		setAlvarezLohmannWindingFocussing(alvarezLohmannWindingFocussing);
+		setAzimuthalPhaseComponensation(azimuthalPhaseComponensation);
 	}
 	
 	/**
@@ -113,7 +153,7 @@ implements SimplePixelWiseOpticalComponentInterface, Serializable, PropertyChang
 	 */
 	public CylindricalLensSpiral()
 	{
-		this(COMPONENT_TYPE_NAME, CylindricalLensSpiralType.LOGARITHMIC, 1, 0.1, 0);
+		this(COMPONENT_TYPE_NAME, CylindricalLensSpiralType.LOGARITHMIC, 1, 0.1, 0, WindingBoundaryPlacementType.HALF_WAY, true, true);
 	}
 
 	@Override
@@ -129,22 +169,147 @@ implements SimplePixelWiseOpticalComponentInterface, Serializable, PropertyChang
 	 */
 	private double calculateWindingNumber(double r, double phi)
 	{
-		// first solve the equation r = b (phi + nu*2*pi - phi0) (in the case of an Archimedean spiral) or
-		// r = exp[b (phi + nu*2*pi - phi0)] (in the case of a logarithmic spiral)
+//		// first solve the equation r = b (phi + nu*2*pi - phi0) (in the case of an Archimedean spiral) or
+//		// r = exp[b (phi + nu*2*pi - phi0)] (in the case of a logarithmic spiral)
+//
+//		double nu;
+//		
+//		switch(cylindricalLensSpiralType)
+//		{
+//		case ARCHIMEDEAN:
+//			nu = (r - b*(phi-phi0)) / b2pi;
+//			break;
+//		case LOGARITHMIC:
+//		default:
+//			// first solve the equation r == exp[b (phi + nu*2*pi - phi0)]
+//			nu = (Math.log(r) - b*(phi-phi0)) / b2pi;
+//		}
+//		return Math.ceil(nu - deltaNu);
 
-		double nu;
+		double phiRotated = phi - phi0;
 		
+		// see adaptiveFresnelLensCalculations.nb
+		switch(windingBoundaryPlacement)
+		{
+		case ROTATED_SPIRAL:
+			switch(cylindricalLensSpiralType)
+			{
+			case ARCHIMEDEAN:
+				return Math.floor(0.5 + (r - b*phiRotated)/b2pi);
+			case FERMAT:
+				return Math.floor(0.5 + (r*r/2 - b*phiRotated)/b2pi);
+			case HYPERBOLIC:
+				return Math.floor(0.5 - (b*phiRotated + 1./r)/b2pi);
+			case LOGARITHMIC:
+			default:
+				return Math.floor(0.5+((Math.log(r) - b*phiRotated)/b2pi));
+			}
+		case HALF_WAY:
+		default:
+			switch(cylindricalLensSpiralType)
+			{
+			case ARCHIMEDEAN:
+				return Math.floor(0.5 + (r - b*phiRotated)/b2pi);
+			case FERMAT:
+				double r2 = r*r;
+				return Math.floor(0.5 + (b*Math.PI*Math.PI + r2*r2 - 2*b*r2*phiRotated)/(4*b*Math.PI*r2));
+			case HYPERBOLIC:
+				double b2r = b*2*r;
+				return Math.floor(0.5 - (b*(phiRotated + Math.sqrt(Math.PI*Math.PI + 1/(b2r*b2r))) + 1./(2.*r))/b2pi);
+			case LOGARITHMIC:
+			default:
+				return Math.floor(0.5+((Math.log(2*r/(Math.exp(-b2pi)+1)) - b*(phiRotated+Math.PI))/b2pi));
+			}
+		}
+	}
+
+	private Complex calculateAlteredPixelValue(BeamCrossSection inputBeam, int i, int j, double x, double y)
+	{
+		// calculate polar coordinates
+		double r = Math.sqrt(x*x + y*y);
+		double phi = Math.atan2(y, x);
+		
+		// calculate the winding number on which the pixel lies...
+		double n = calculateWindingNumber(r, phi);
+		// ... and from that the value of psi (the unbounded azimuthal parameter)
+		double psi = phi+n*2*Math.PI-phi0;
+		
+		// calculate the radial coordinate for the centre of the nth winding in the phi direction, and the focal length
+		double R, f;
 		switch(cylindricalLensSpiralType)
 		{
 		case ARCHIMEDEAN:
-			nu = (r - b*(phi-phi0)) / b2pi;
+			R = b*psi;
+			f = f1/R;
+			break;
+		case FERMAT:
+			R = Math.sqrt(2.*b*psi);
+			f = f1/(R*R);
+			break;
+		case HYPERBOLIC:
+			R = -1./(b*psi);
+			f = f1*R;
 			break;
 		case LOGARITHMIC:
 		default:
-			// first solve the equation r == exp[b (phi + nu*2*pi - phi0)]
-			nu = (Math.log(r) - b*(phi-phi0)) / b2pi;
+			R = Math.exp(b*psi);
+			f = f1;
 		}
-		return Math.ceil(nu - deltaNu);
+		
+		// locally shift the phase of the amplitude cross-section
+		double phaseShift = inputBeam.getLensPhase(f, MyMath.sqr(r-R));
+		if(alvarezLohmannWindingFocussing) {
+			// calculate a
+			double a;
+			switch(cylindricalLensSpiralType)
+			{
+			case ARCHIMEDEAN:
+				a = -2./f1;
+				break;
+			case FERMAT:
+				a = -3.*R/f1;
+				break;
+			case HYPERBOLIC:
+				a = 0;
+				break;
+			case LOGARITHMIC:
+			default:
+				a = -1./(R*f1);
+			}
+			phaseShift += inputBeam.getAlvarezLohmannLensPartPhase(a, r-R);
+		}
+		
+		// double bPsi;
+		if(azimuthalPhaseComponensation) {
+			switch(cylindricalLensSpiralType)
+			{
+			case ARCHIMEDEAN:
+				// (b psi)^3 k / (6 f1) = R^3 k / (6 f R) = R^2 k / (6 f)
+				phaseShift += R*R*inputBeam.getWavenumber()/(6.*f);
+				break;
+			case FERMAT:
+				// (b psi)^2 k / (2 f1) = (b psi)^2 k / (2 f 2 b psi) = b psi k / (4 f) = R^2 k / (8 f)
+				phaseShift += R*R*inputBeam.getWavenumber()/(8.*f);
+				break;
+			case HYPERBOLIC:
+				// -k/(2 b psi f1) = k R / (2 f1)
+				phaseShift += inputBeam.getWavenumber()*R/(2.*f1);
+				break;
+			case LOGARITHMIC:
+			default:
+				// exp(2 b psi) k / (4 f1)
+				phaseShift += R*R*inputBeam.getWavenumber()/(4.*f1);
+			}
+		}
+		
+		double cosPhaseShift = Math.cos(phaseShift);
+		double sinPhaseShift = Math.sin(phaseShift);
+		double re = inputBeam.getElementRe(i,j);
+		double im = inputBeam.getElementIm(i,j);
+	  
+		// real part of (re + i im) exp(i phaseShift)
+		// imaginary part of (re + i im) exp(i phaseShift)
+		return new Complex(re * cosPhaseShift - im * sinPhaseShift, re * sinPhaseShift + im * cosPhaseShift);
 	}
 
 	@Override
@@ -160,38 +325,7 @@ implements SimplePixelWiseOpticalComponentInterface, Serializable, PropertyChang
 				{
 					double x = inputBeam.getX(i);
 
-					// calculate polar coordinates
-					double r = Math.sqrt(x*x + y*y);
-					double phi = Math.atan2(y, x);
-					
-					// calculate the winding number on which the pixel lies
-					double n = calculateWindingNumber(r, phi);
-					
-					// calculate the radial coordinate for the centre of the nth winding in the phi direction, and the focal length
-					double rN, f;
-					switch(cylindricalLensSpiralType)
-					{
-					case ARCHIMEDEAN:
-						rN = b*(phi+n*2*Math.PI-phi0);
-						f = focalLength/rN;
-						break;
-					case LOGARITHMIC:
-					default:
-						rN = Math.exp(b*(phi+n*2*Math.PI-phi0));
-						f = focalLength;
-					}
-					
-					// locally shift the phase of the amplitude cross-section
-					double phaseShift = inputBeam.getLensPhase(f, MyMath.sqr(r-rN));
-					double cosPhaseShift = Math.cos(phaseShift);
-					double sinPhaseShift = Math.sin(phaseShift);
-					double re = inputBeam.getElementRe(i,j);
-					double im = inputBeam.getElementIm(i,j);
-				  
-					// real part of (re + i im) exp(i phaseShift)
-					// imaginary part of (re + i im) exp(i phaseShift)
-					inputBeam.setElement(i,j,
-							new Complex(re * cosPhaseShift - im * sinPhaseShift, re * sinPhaseShift + im * cosPhaseShift));
+					inputBeam.setElement(i, j, calculateAlteredPixelValue(inputBeam, i, j, x, y));					
 				}
 			}
 		}
@@ -206,38 +340,7 @@ implements SimplePixelWiseOpticalComponentInterface, Serializable, PropertyChang
 		double x = inputBeam.getX(i);
 		double y = inputBeam.getY(j);
 		
-		// calculate polar coordinates
-		double r = Math.sqrt(x*x + y*y);
-		double phi = Math.atan2(y, x);
-		
-		// calculate the winding number on which the pixel lies
-		double n = calculateWindingNumber(r, phi);
-		
-		// calculate the radial coordinate for the centre of the nth winding in the phi direction, and the focal length
-		double rN, f;
-		switch(cylindricalLensSpiralType)
-		{
-		case ARCHIMEDEAN:
-			rN = b*(phi+n*2*Math.PI-phi0);
-			f = focalLength/rN;
-			break;
-		case LOGARITHMIC:
-		default:
-			rN = Math.exp(b*(phi+n*2*Math.PI-phi0));
-			f = focalLength;
-		}
-
-		// locally shift the phase of the amplitude cross-section
-		double phaseShift = inputBeam.getLensPhase(f, MyMath.sqr(r-rN));
-		double cosPhaseShift = Math.cos(phaseShift);
-		double sinPhaseShift = Math.sin(phaseShift);
-		double re = inputBeam.getElementRe(i,j);
-		double im = inputBeam.getElementIm(i,j);
-	  
-		// real part of (re + i im) exp(i phaseShift)
-		// imaginary part of (re + i im) exp(i phaseShift)
-		inputBeam.setElement(i,j,
-				new Complex(re * cosPhaseShift - im * sinPhaseShift, re * sinPhaseShift + im * cosPhaseShift));
+		inputBeam.setElement(i, j, calculateAlteredPixelValue(inputBeam, i, j, x, y));
 
 		return inputBeam;
 	}
@@ -252,11 +355,12 @@ implements SimplePixelWiseOpticalComponentInterface, Serializable, PropertyChang
 		 * Edit focal length control
 		 */
 		
-		editPanel.add(UIBitsAndBobs.makeRow("A cylindrical lens of focal length (at r=1) ", focalLengthField, ",", true));
+		editPanel.add(UIBitsAndBobs.makeRow("A cylindrical lens of focal length (at <i>r</i> = 1 m) ", focalLengthField, ",", true));
 		editPanel.add(UIBitsAndBobs.makeRow("wound into a ", cylindricalLensSpiralTypeComboBox, " spiral", true));
-		editPanel.add(UIBitsAndBobs.makeHTMLLabel("of the form r=exp[b*(phi-phi0)] (in the case of a logarithmic spiral)"));
-		editPanel.add(UIBitsAndBobs.makeHTMLLabel("or r=b*(phi-phi0) (in the case of an Archimedean spiral),"));
-		editPanel.add(UIBitsAndBobs.makeRow("where b=", bTextField, " and phi0=", phi0DegTextField, "&deg;", true));
+		editPanel.add(UIBitsAndBobs.makeRow("where <i>b</i> =", bTextField, " and &theta;<sub>0</sub> =", phi0DegTextField, "&deg;.", true));
+		editPanel.add(UIBitsAndBobs.makeRow("Winding boundary ", windingBoundaryPlacementComboBox, true));
+		editPanel.add(alvarezLohmannWindingFocussingCheckBox);
+		editPanel.add(azimuthalPhaseComponensationCheckBox);
 	}
 	
 	@Override
@@ -267,17 +371,35 @@ implements SimplePixelWiseOpticalComponentInterface, Serializable, PropertyChang
 		cylindricalLensSpiralTypeComboBox = new JComboBox<CylindricalLensSpiralType>(CylindricalLensSpiralType.values());
 		cylindricalLensSpiralTypeComboBox.setToolTipText("Shape of the spiral the cylindrical lens is wound into");
 		cylindricalLensSpiralTypeComboBox.addActionListener(this);
-		cylindricalLensSpiralTypeComboBox.setSelectedItem(CylindricalLensSpiralType.LOGARITHMIC);
+		cylindricalLensSpiralTypeComboBox.setSelectedItem(cylindricalLensSpiralType);
 		cylindricalLensSpiralTypeComboBox.setMaximumSize(cylindricalLensSpiralTypeComboBox.getPreferredSize());
 		
 		focalLengthField = new LengthField(this);
-		focalLengthField.setLengthInMetres(focalLength);
+		focalLengthField.setLengthInMetres(f1);
 		
 		bTextField = UIBitsAndBobs.makeDoubleFormattedTextField(this);
-		bTextField.setValue(new Double(b));
+		bTextField.setValue(Double.valueOf(b));
 
 		phi0DegTextField = UIBitsAndBobs.makeDoubleFormattedTextField(this);
-		phi0DegTextField.setValue(new Double(MyMath.rad2deg(phi0)));
+		phi0DegTextField.setValue(Double.valueOf(MyMath.rad2deg(phi0)));
+		
+		windingBoundaryPlacementComboBox = new JComboBox<WindingBoundaryPlacementType>(WindingBoundaryPlacementType.values());
+		windingBoundaryPlacementComboBox.setToolTipText("Placement of the boundary between neighbouring windings");
+		windingBoundaryPlacementComboBox.addActionListener(this);
+		windingBoundaryPlacementComboBox.setSelectedItem(windingBoundaryPlacement);
+		windingBoundaryPlacementComboBox.setMaximumSize(windingBoundaryPlacementComboBox.getPreferredSize());
+		
+		alvarezLohmannWindingFocussingCheckBox = new JCheckBox("Alvarez-Lohmann winding focussing");
+		alvarezLohmannWindingFocussingCheckBox.setToolTipText("Should Alvarez-Lohmann winding focussing be used?");
+		alvarezLohmannWindingFocussingCheckBox.addPropertyChangeListener(this);
+		alvarezLohmannWindingFocussingCheckBox.setSelected(alvarezLohmannWindingFocussing);
+		alvarezLohmannWindingFocussingCheckBox.setAlignmentX(Component.CENTER_ALIGNMENT);
+		
+		azimuthalPhaseComponensationCheckBox = new JCheckBox("Azimuthal phase componensation");
+		azimuthalPhaseComponensationCheckBox.setToolTipText("Should azimuthal phase componensation be used?");
+		azimuthalPhaseComponensationCheckBox.addPropertyChangeListener(this);
+		azimuthalPhaseComponensationCheckBox.setSelected(azimuthalPhaseComponensation);
+		azimuthalPhaseComponensationCheckBox.setAlignmentX(Component.CENTER_ALIGNMENT);
 	}
 	
 	@Override
@@ -289,6 +411,9 @@ implements SimplePixelWiseOpticalComponentInterface, Serializable, PropertyChang
         if(focalLengthField != null) setFocalLength(focalLengthField.getLengthInMetres());
         if(bTextField != null) setB(((Number)bTextField.getValue()).doubleValue());
         if(phi0DegTextField != null) setPhi0(MyMath.deg2rad(((Number)phi0DegTextField.getValue()).doubleValue()));
+        if(windingBoundaryPlacementComboBox != null) windingBoundaryPlacement = (WindingBoundaryPlacementType)(windingBoundaryPlacementComboBox.getSelectedItem());
+        if(alvarezLohmannWindingFocussingCheckBox != null) alvarezLohmannWindingFocussing = alvarezLohmannWindingFocussingCheckBox.isSelected();
+        if(azimuthalPhaseComponensationCheckBox != null) azimuthalPhaseComponensation = azimuthalPhaseComponensationCheckBox.isSelected();
 	}
 	
 	@Override
@@ -308,6 +433,14 @@ implements SimplePixelWiseOpticalComponentInterface, Serializable, PropertyChang
 	    {
 	        setPhi0(MyMath.deg2rad(((Number)phi0DegTextField.getValue()).doubleValue()));
 	    }
+	    else if (source == alvarezLohmannWindingFocussingCheckBox)
+	    {
+	    	alvarezLohmannWindingFocussing = alvarezLohmannWindingFocussingCheckBox.isSelected();
+	    }
+	    else if(source.equals(azimuthalPhaseComponensationCheckBox))
+	    {
+	    	azimuthalPhaseComponensation = azimuthalPhaseComponensationCheckBox.isSelected();
+	    }
 	    
 		// Fire an edit panel event
 		editListener.editMade();
@@ -322,6 +455,10 @@ implements SimplePixelWiseOpticalComponentInterface, Serializable, PropertyChang
 		{
 			cylindricalLensSpiralType = (CylindricalLensSpiralType)(cylindricalLensSpiralTypeComboBox.getSelectedItem());
 		}
+		else if (source == windingBoundaryPlacementComboBox)
+		{
+			windingBoundaryPlacement = (WindingBoundaryPlacementType)(windingBoundaryPlacementComboBox.getSelectedItem());
+		}
 	    
 		// Fire an edit panel event
 		editListener.editMade();
@@ -330,7 +467,7 @@ implements SimplePixelWiseOpticalComponentInterface, Serializable, PropertyChang
 	@Override
 	public String getFormattedName()
 	{
-		return "f = " + Double.toString(focalLength) + "m";
+		return "f = " + Double.toString(f1) + "m";
 		// return getName() + " (f = " + Double.toString(focalLength) + "m)";
 	}
 
@@ -344,12 +481,12 @@ implements SimplePixelWiseOpticalComponentInterface, Serializable, PropertyChang
 
 	public double getFocalLength()
 	{
-		return focalLength;
+		return f1;
 	}
 
 	public void setFocalLength(double focalLength)
 	{
-		this.focalLength = focalLength;
+		this.f1 = focalLength;
 	}
 
 	public double getB() {
@@ -363,7 +500,7 @@ implements SimplePixelWiseOpticalComponentInterface, Serializable, PropertyChang
 	public void setB(double b) {
 		this.b = b;
 		b2pi = 2*Math.PI*b;
-		deltaNu = Math.log(0.5*(1+Math.exp(b2pi))) / b2pi;
+		// deltaNu = Math.log(0.5*(1+Math.exp(b2pi))) / b2pi;
 	}
 
 	public double getPhi0() {
@@ -372,6 +509,48 @@ implements SimplePixelWiseOpticalComponentInterface, Serializable, PropertyChang
 
 	public void setPhi0(double phi0) {
 		this.phi0 = phi0;
+	}
+
+	/**
+	 * @return the windingBoundaryPlacement
+	 */
+	public WindingBoundaryPlacementType getWindingBoundaryPlacement() {
+		return windingBoundaryPlacement;
+	}
+
+	/**
+	 * @param windingBoundaryPlacement the windingBoundaryPlacement to set
+	 */
+	public void setWindingBoundaryPlacement(WindingBoundaryPlacementType windingBoundaryPlacement) {
+		this.windingBoundaryPlacement = windingBoundaryPlacement;
+	}
+
+	/**
+	 * @return the alvarezLohmannWindingFocussing
+	 */
+	public boolean isAlvarezLohmannWindingFocussing() {
+		return alvarezLohmannWindingFocussing;
+	}
+
+	/**
+	 * @param alvarezLohmannWindingFocussing the alvarezLohmannWindingFocussing to set
+	 */
+	public void setAlvarezLohmannWindingFocussing(boolean alvarezLohmannWindingFocussing) {
+		this.alvarezLohmannWindingFocussing = alvarezLohmannWindingFocussing;
+	}
+
+	/**
+	 * @return the azimuthalPhaseComponensation
+	 */
+	public boolean isAzimuthalPhaseComponensation() {
+		return azimuthalPhaseComponensation;
+	}
+
+	/**
+	 * @param azimuthalPhaseComponensation the azimuthalPhaseComponensation to set
+	 */
+	public void setAzimuthalPhaseComponensation(boolean azimuthalPhaseComponensation) {
+		this.azimuthalPhaseComponensation = azimuthalPhaseComponensation;
 	}
 
 }
